--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,11 @@
-<h2 id="title">Yoga Music</h2>
+<section id="YogaMusic">  
+    <header id="header">
+        <h1>Yoga Music</h1>
+    </header>
 
-{{outlet}}
+    {{outlet}}
+</section>
+
+<footer id="info">  
+    <p>Double-click to add in your profile</p>
+</footer> 
