--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,12 @@
     <header id="header">
         <h1>Yoga Music</h1>
     </header>
+    <div class="navbar">
+ 	{{#link-to 'index' class='home navbar-brand'}}Home{{/link-to}}
+ 	{{#link-to 'about' class='about navbar-brand'}}About{{/link-to}}
+ 	{{#link-to 'musicians' class='about navbar-brand'}}Musicians{{/link-to}}
+
+</div>
 
     {{outlet}}
 </section>
