added more data to musicians

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,5 +13,5 @@
 </section>
 
 <footer id="info">  
-    <p>Double-click to add in your profile</p>
+ {{!--    <p>Double-click to add in your profile</p> --}}
 </footer> 
