--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
     {{#each model as |musicin|}}
         <li class="completed">
             <input type="checkbox" class="toggle">
-            <label>{{musician.title}}</label><button class="destroy"></button>
+            <label>{{musician.title}}</label>
         </li>
     {{/each}}
 </ul>
